--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 		const h3 = document.getElementById("h3");
 		const h4 = document.getElementById("h4");
 		const h5 = document.getElementById("h5");
-		const confirm = document.getElementById("h5");
+		const confirm = document.getElementById("confirmButton");
 
 		function change1() {
 			document.getElementById("h1").src="heart.png";
@@ -90,7 +90,7 @@
 			h4.src="heart.png";
 			h5.src="heart.png";
 		}
-		function confirm() {
+		function confirmation() {
 			document.getElementById("h1").src="heartnocolor.png";
 			h2.src="heartnocolor.png";
 			h3.src="heartnocolor.png";
@@ -99,7 +99,7 @@
 		}
 
   </script>
-		<div id="confirmButton" onclick="confirm()"><p>Confirm</p></div>
+		<div id="confirmButton" onclick="confirmation()"><p>Confirm</p></div>
 	</div>
 	</div>
 </body>
