--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<div class="content">
 	<div id="headBack"></div>
 	<div class="head">
-		<a href="index.html"><img src="logo.png" class="logo"></a>
+		<a href="index.html"><img src="logo.jpeg" class="logo"></a>
 		<img id="menuButton" src="./menu.png">
 	</div>
 
