--- a/progress.html
+++ b/progress.html
@@ -15,9 +15,11 @@
 	</div>
 
 	<div id="bigMenu">
-		<a href="index.html"><div class="bigMenuButton"><p>Home</p></div></a>
-		<a href="progress.html"><div class="bigMenuButton"><<p>All progress</p></div></a>
-		<a href="index.html"><div class="bigMenuButton"><p>FAQ</p></div></a>
+		<a href="index.html"><div class="bigMenuButton"><img src="home.png"><p>Home</p></div></a>
+		<a href="progress.html"><div class="bigMenuButton"><img src="progress.png"><p>All progress</p></div></a>
+		<a href="progress.html"><div class="bigMenuButton"><img src="write.png"><p>Add comment</p></div></a>
+		<a href="progress.html"><div class="bigMenuButton"><img src="add.png"><p>Add new task</p></div></a>
+		<a href="index.html"><div class="bigMenuButton"><img src="faq.png"><p>FAQ</p></div></a>
 	</div>
 
 
@@ -57,7 +59,7 @@
 	<div class="fullProgress">
 		<p>All your progress:</p>
 		<div class="fullHeart"></div>
-		<p>52%</p>
+		<p id="percentage">52%</p>
 	</div>
 	<div class="tasks">
 		<h1>Done tasks:</h1>
