--- a/progress.html
+++ b/progress.html
@@ -17,8 +17,8 @@
 	<div id="bigMenu">
 		<a href="index.html"><div class="bigMenuButton"><img src="home.png"><p>Home</p></div></a>
 		<a href="progress.html"><div class="bigMenuButton"><img src="progress.png"><p>All progress</p></div></a>
-		<a href="progress.html"><div class="bigMenuButton"><img src="write.png"><p>Add comment</p></div></a>
-		<a href="progress.html"><div class="bigMenuButton"><img src="add.png"><p>Add new task</p></div></a>
+		<a href="comment.html"><div class="bigMenuButton"><img src="write.png"><p>Add comment</p></div></a>
+		<a href="index.html"><div class="bigMenuButton"><img src="add.png"><p>Add new task</p></div></a>
 		<a href="index.html"><div class="bigMenuButton"><img src="faq.png"><p>FAQ</p></div></a>
 	</div>
 
